--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@preact/signals": "^1.1.3",
     "highlight.js": "^11.7.0",
     "json5": "^2.2.3",
+    "just-clone": "^6.2.0",
     "katex": "^0.16.6",
     "marked": "^4.3.0",
     "marked-extended-latex": "^1.1.0",
