--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@preact/signals": "^1.1.3",
     "highlight.js": "^11.7.0",
+    "http-proxy-middleware": "^2.0.6",
     "json5": "^2.2.3",
     "just-clone": "^6.2.0",
     "katex": "^0.16.6",
